# annowork-api-python-client

./: .gitignore  .readthedocs.yaml  .travis.yml  Makefile  README.md  README_for_developer.md  pylintrc  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: lint-test.yml
.github/workflows/: codeql-analysis.yml  publish-to-pypi.yml
annoworkapi/: __version__.py  actual_working_time.py  annofab.py  api.py  enums.py  exceptions.py  generated_api.py  resource.py  schedule.py  wrapper.py
docs/: conf.py  index.rst  requirements.txt
docs/_templates/: links.html
docs/api_reference/: annofab.rst  api.rst  enums.rst  exceptions.rst  index.rst  resource.rst  utils.rst  wrapper.rst
generate/: .openapi-generator-ignore  generate.sh
generate/partial-header/: generated_api_partial_header.py  models_partial_header.py
generate/swagger/: swagger-components.yml  swagger-error-components.yml  swagger-models.yml  swagger-partial-header.yml  swagger-security-components.yml  swagger.yml
generate/template/: api.mustache  model.mustache
tests/: conftest.py  test_api.py  test_local_actual_working_time.py  test_local_annofab.py  test_local_job.py  test_local_schedule.py  test_local_utils.py  test_resource.py  test_wrapper.py
